# a-hackthon

./: .gitignore  .pre-commit-config.yaml  CLAIMS.md  CLAUDE.md  CONTRACTS.md  JUDGE_GUIDE.md  LIMITATIONS.md  Makefile  README.md  REVIEWER_START_HERE.md  docker-compose.yml  pyproject.toml  reproduce_claims.py
.claude/: settings.json
.pipeline/: .gitignore
agent-eval/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEMO_GUIDE.md  DEMO_SCRIPT.md  Dockerfile  PITCH.md  README.md  TECH_REPORT.md  _agent_worker.py  ablation_runner.py  agent_sandbox.py  agents.py  app.py  baseline_agent.py  baseline_agent_outbound.py  baseline_comparison.py  blind_review_app.html  blind_review_app.py  blind_review_app_ready.html  build_review_app.py  calibration.py  canonical_intent_ledger.py  causal_diagnosis.py  compile_instruction.py  cost_tracker.py  coverage_guided.py  dashboard.py  diagnosis.py  docker-compose.yml  eval_coverage.py  evaluation-framework-v1.md  evidence_verifier.py  flawed_agent_outbound.py  generate_report.py  gold_annotation_draft.html  harness.py  instruction_lint.py  (+38 more)
docs/: CHANGELOG.md  ITERATIONS.md  SCORE_SEMANTICS.md  THREAT_MODEL.md  TRACE_WALKTHROUGH.md  competitive_analysis_20agents.md  competitor_gap.md
scripts/: judge_verify.sh  quality_gate.sh  verify_doc_facts.py
tests/: conftest.py
traces/: outbound_0c707065.json  outbound_0f5a0a18.json  outbound_129121f7.json  outbound_151164b4.json  outbound_1bc37fe8.json  outbound_2a1104c3.json  outbound_2a7ff152.json  outbound_2cfec729.json  outbound_2dab58d0.json  outbound_2e85f645.json  (+36 more)
(+491 files in other folders)
